--- a/package.json
+++ b/package.json
@@ -9,10 +9,18 @@
   },
   "dependencies": {
     "@react-native-community/netinfo": "^5.8.1",
+    "@wora/apollo-cache": "^2.2.0",
+    "@wora/apollo-offline": "^2.3.0",
+    "apollo-client": "^2.6.10",
+    "apollo-link": "^1.2.14",
+    "apollo-link-http": "^1.5.17",
     "aws-amplify": "^3.0.11",
     "aws-amplify-react-native": "^4.1.2",
+    "aws-appsync-auth-link": "^2.0.2",
+    "aws-appsync-subscription-link": "^2.1.0",
     "expo": "~37.0.3",
     "react": "~16.9.0",
+    "react-apollo": "^3.1.5",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
     "react-native-web": "~0.11.7"
