--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@apollo/react-hooks": "^3.1.5",
     "@react-native-community/async-storage": "^1.10.1",
     "@react-native-community/netinfo": "^5.8.1",
     "@wora/apollo-cache": "^2.2.0",
@@ -20,11 +21,13 @@
     "aws-appsync-auth-link": "^2.0.2",
     "aws-appsync-subscription-link": "^2.1.0",
     "expo": "~37.0.3",
+    "graphql-tag": "^2.10.3",
     "react": "~16.9.0",
     "react-apollo": "^3.1.5",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-37.0.1.tar.gz",
-    "react-native-web": "~0.11.7"
+    "react-native-web": "~0.11.7",
+    "uuid": "3.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
