--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     "react/jsx-one-expression-per-line": 0,
     "react/jsx-filename-extension": 0,
     "no-use-before-define": 0,
-    "no-undef": 0
+    "no-undef": 0,
+    "no-unused-expressions": ["error", { "allowShortCircuit": true }]
   }
 }
